<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>dk.magenta.datafordeler</groupId>
    <artifactId>datafordeler-plugin-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.2</version>
    <description>plugin parent pom</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <junit.version>4.13</junit.version>
        <jackson.version>2.12.4</jackson.version>
        <spring.version>5.2.16.RELEASE</spring.version>
        <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    
</project>
